--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,8 +7,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/auth/sign-up">Sign Up</a></li>
-            <li>Sign In</li>
+            <% if (user) { %>
+                <li><a href="/auth/sign-out">Sign Out</a></li>
+            <% } else { %>
+                    <li><a href="/auth/sign-up">Sign Up</a></li>
+                    <li><a href="/auth/sign-in">Sign In</a></li>
+            <% } %>
         </ul>
     </nav>    
 </body>
