--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -17,7 +17,7 @@
         <input type="password" name="password" id="password" required>
         
         <p><%= loginFailed %></p>
-        <button type="submit">Sign Up</button>
+        <button type="submit">Sign In</button>
     </form>
 </body>
 </html>
