--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <p>This works</p>
+    <small>What should we call your new project?</small>
+    <form action="/users/<%= user._id %>/projects" method="POST">
+
+        <input type="text" name="title" id="title" required>
+        <button type="submit">Project +</button>
+
+    </form>
 </body>
 </html>
