--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -3,21 +3,59 @@ body {
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow: hidden;
+    margin: 0;
 }
 main {
     display: flex;
 }
 section {
     width: 40vw;
-    min-height: 100vh;
+    min-height: 100vh; 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
-/* .section-left {
+.section-left-appear {
+    min-height: 100vh;
+    width: 15vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #A288E3;
+    background-color: #121619;
+    padding-left: 20px;
 }
-.section-right{
+.section-left-text{
+    display: inline-block; 
+    border-bottom: 2px solid white;
+    padding-bottom: 20px; 
+    padding-top: 10px;
+    margin-bottom: 0px; 
+    width: 15vw;
+    color: #94FBAB;
+    text-decoration: none;
+}
+.section-left {
+    
+}
+.view-proj{
+    position: fixed;
+    top: 70px;
+    left: 25px;
+}
+p>a {
+    color: #A288E3; 
+    text-decoration: none; 
+    padding: 3px 10px;
+}
+p>a:hover{
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: #94FBAB;
+    color:black ;
+    padding: 3px;
+}
+/* .section-right{
 
 } */
 .nav-menu {
@@ -55,8 +93,6 @@ section {
     color:black ;
     padding: 3px;
 }
-
-
 p {
     display: flex;
     flex-direction: column;
