--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -5,12 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <small>What should we call your new project?</small>
-    <form action="/users/<%= user._id %>/projects" method="POST">
+    <div class="section-right-create">
+        <form method="POST" action="/users/<%= user._id%>/projects">
 
-        <input type="text" name="title" id="title" required>
-        <button type="submit">Project +</button>
+            <div class="field">
+                <label for="title">Project Title:</label>
+                <input type="text" id="title" name="title" required>
+            </div>
+            <div class="field date-field">
+                <p><label for="dueDate">Due Date:</label></p>
+                <input type="date" id="dueDate" name="dueDate" required>
+            </div>
+            <p class="field-p">Share Board:</p>
+            <div class="field" id="userEntry">
+                    
+                <label for="user">Username:</label>
+                <input type="text" name="user" id="user">
+                
+                <select name="privilege" required>
+                    <option value="admin">Admin</option>
+                    <option value="member" selected>Member</option>
+                    <option value="observer">Observer</option>
+                </select>
+            </div>
+            <button type="button" id="addUser">Add User</button>
+            <button type="submit">Create Project</button>
+        </form> 
+    </div>
+    <script>
+        const addUserButton = document.querySelector('#addUser');
+        addUserButton.addEventListener('click', () => {
+            const userEntry = document.querySelector('#userEntry');
+            const newUserNum = userEntry.querySelectorAll('.field').length + 1;
 
-    </form>
+            const field = document.createElement('div');
+            field.classList.add('field');
+            
+            field.innerHTML = `
+                <label for="user${newUserNum}">Username:</label>
+                <input type="text" id="user${newUserNum}" name="user" >
+                <select name="privilege" >
+                    <option value="admin">Admin</option>
+                    <option value="member" selected>Member</option>
+                    <option value="observer">Observer</option>
+                </select>
+            `;
+            userEntry.appendChild(field);
+        });
+    </script>
 </body>
 </html>
