--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
             <div class="section-left">
                 <% if (user) { %>
                     <% if (isShowing) { %>
-                        <%-include('partials/projects/index.ejs', {userProjs: userProjs})%>
+                        <%-include('partials/projects/index.ejs', {userProjs , userAssignedProjects})%>
                     <% } %>
                 <% } %>
                 <p>This is something u could use for the empty space</p>
