--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -9,14 +9,14 @@
         <form method="POST" action="/users/<%= user._id%>/projects">
 
             <div class="field">
-                <label for="title">Project Title:</label>
+                <label for="title">Project Title</label>
                 <input type="text" id="title" name="title" required>
             </div>
             <div class="field date-field">
-                <p><label for="dueDate">Due Date:</label></p>
+                <p><label for="dueDate">Project Deadline</label></p>
                 <input type="date" id="dueDate" name="dueDate" required>
             </div>
-            <p class="field-p">Share Board:</p>
+            <p class="field-p">Share Board</p>
             <div class="field" id="userEntry">
                     
                 <label for="user">Username:</label>
