--- a/views/partials/projects/show.ejs
+++ b/views/partials/projects/show.ejs
@@ -36,7 +36,7 @@
                             <form action="/users/<%= user._id %>/projects/<%= project._id %>?_method=DELETE" method="post">
                                 <button type="submit">Delete</button>
                             </form>
-                            <a href="#" class="edit-link">Edit</a>
+                            <a href="/users/<%= user._id %>/projects/<%= project._id %>/edit" class="edit-link">Edit</a>
                         </div>
                     <% } %>
                 <% }) %> 
