--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,7 @@
             <% if (user) { %>
                 <a href="/users/<%=user._id%>/projects">Project View</a>
                 <a href="">Dashboard</a>
+                <p class="name"><%=user.username%></p>
             <% } %>
         </div>
         <div class="nav-right">
