--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -23,9 +23,9 @@
                 <input type="text" name="user" id="user">
                 
                 <select name="privilege" required>
-                    <option value="admin">Admin</option>
-                    <option value="member" selected>Member</option>
-                    <option value="observer">Observer</option>
+                    <option value="admin">admin</option>
+                    <option value="member" selected>member</option>
+                    <option value="observer">observer</option>
                 </select>
             </div>
             <button type="button" id="addUser">Add User</button>
