Basic structure of 'list' MVC made.

--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -45,9 +45,9 @@
                 <label for="user${newUserNum}">Username:</label>
                 <input type="text" id="user${newUserNum}" name="user" >
                 <select name="privilege" >
-                    <option value="admin">Admin</option>
-                    <option value="member" selected>Member</option>
-                    <option value="observer">Observer</option>
+                    <option value="admin">admin</option>
+                    <option value="member" selected>member</option>
+                    <option value="observer">observer</option>
                 </select>
             `;
             userEntry.appendChild(field);
