--- a/views/partials/projects/edit.ejs
+++ b/views/partials/projects/edit.ejs
@@ -14,7 +14,7 @@
             <div class="section-left">
                 <% if (user) { %>
                     <% if (isShowing) { %>
-                        <%-include('partials/projects/index.ejs', {userProjs , userAssignedProjects})%>
+                        <%-include('../projects/index.ejs', {userProjs , userAssignedProjects})%>
                     <% } %>
                 <% } %>
             </div>
@@ -81,9 +81,9 @@
                 <label for="user${newUserNum}">Username:</label>
                 <input type="text" id="user${newUserNum}" name="user" >
                 <select name="privilege" >
-                    <option value="admin">Admin</option>
-                    <option value="member" selected>Member</option>
-                    <option value="observer">Observer</option>
+                    <option value="admin">admin</option>
+                    <option value="member" selected>member</option>
+                    <option value="observer">observer</option>
                 </select>
             `;
             userEntry.appendChild(field);
